# bkub

./: .flake8  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  butane-k3s.coreos.bu  pyproject.toml  pyrightconfig.json  serve-boot-artifacts  server  setup.cfg
.githooks/: pre-commit
.github/workflows/: gitleaks.yml
bootServer/: __init__.py  cli.py  http_server.py  server.py  tftp_server.py
scripts/: fetch-fcos.sh  serve_boot_artifacts.py
tests/: conftest.py  test_cli.py  test_entrypoints.py  test_http_https_units.py  test_http_server.py  test_https_server.py  test_integration.py  test_server_units.py  test_streams_parsing.py  test_tftp_server.py  test_tftp_units.py
