[project]
name = "bootServer"
version = "0.0.0"
description = "HTTP + minimal TFTP server for boot artifacts"
requires-python = ">=3.13"
authors = [{name = "Auto Generated"}]

[project.scripts]
serve-boot-artifacts = "bootServer.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
